--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,8 @@
    color: #fff;
 }
 
+
+
 .filterBtn {
    font-size: 22px;
    font-weight: 500;
@@ -190,7 +192,7 @@ body {
 }
 
 .carousel {
-   height: 100vh;
+   height: 35vh;
 }
 
 #carouselExampleControlsNoTouching {
@@ -277,6 +279,7 @@ body {
    display: flex;
    /*justify-content: center;*/
    align-items: center;
+   margin-top: 2rem;
 }
 .home-details-allcontainer {
    display: flex;
@@ -391,16 +394,23 @@ body {
    display: none;
 }
 
+.home-details__img-col-2 {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   width: 100%;
+}
+
 .home-details__img-col-2_img2 {
    display: none;
    width: 100%;
 }
 
 .home-details__img-col-2_img1 {
-   width: 323px;
+   width: 100%;
    height: 311px;
-   margin-top: 15px;
-   margin-left: 12px;
+   margin: 1rem;
+   
 }
 .home-details__img-col-2_img2 {
    width: 210px;
@@ -435,6 +445,15 @@ body {
    line-height: 36.5px;
    font-weight: 500;
    color: var(--textColor2);
+}
+
+.filter-button-group {
+   display: flex;
+   gap: 1rem;
+}
+
+#contenedorProductos {
+   padding:0 1rem;
 }
 
 .card-name {
@@ -552,7 +571,7 @@ body {
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
-   height: 50%;
+   height: 75%;
 }
 
 .detailView-text__pretitle {
@@ -815,6 +834,14 @@ footer {
    width: 2.2rem;
 }
 
+.medidas-item-list {
+   color: var(--mainColor1);
+}
+
+.medida-text {
+   color: var(--textColor2);
+}
+
 /* ======================================================================================================================= 
 ===================================================== DESKTOP ============================================================ 
 ======================================================================================================================= */
@@ -867,10 +894,15 @@ footer {
       height: inherit;
    }
 
+   .navbar__linklogo {
+      align-self: flex-end;
+      margin-left: 10%;
+   }
+
    .navbar__logo {
       width: 248px;
       height: 71px;
-      margin-left: 101%;
+      margin: 0;
       /*position: absolute;
       left: 250px;
       top: 13px;*/
@@ -919,6 +951,7 @@ footer {
    /* Slide */
    .carousel {
       width: 100%;
+      height: 100vh;
    }
 
    .carousel-item {
@@ -1169,6 +1202,12 @@ footer {
       color: var(--textColor1);
       padding: 4rem 0;
    }
+
+   .filter-button-group {
+      display: flex;
+      gap: 5rem;
+   }
+
    .container_title_products {
       display: flex;
       justify-content: center;
@@ -1237,6 +1276,8 @@ footer {
       align-items: center;
       justify-content: center;
       gap: 2rem;
+      margin-top: 0;
+      padding: 0;
    }
    .detailView-container {
       height: 100%;
@@ -1247,11 +1288,11 @@ footer {
       justify-content: center;
       color: var(--textColor2);
       gap: 2rem;
-      margin-top: 4rem;
+      margin-top: 1rem;
    }
    .detailView-container__images {
       height: 100%;
-      width: 50%;
+      width: 100%;
       display: flex;
       flex-direction: column;
    }
@@ -1309,6 +1350,8 @@ footer {
       margin: 0;
       position: relative;
       top: 10px;
+      line-height: 0;
+      padding-bottom: 15px;
    }
 
    .container__btn__detailview {
@@ -1682,4 +1725,6 @@ footer {
    .home-details__img-col-1 > img {
       height: 60%;
    }
+   
+   
 }
