--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,6 @@
    color: #fff;
 }
 
-
-
 .filterBtn {
    font-size: 22px;
    font-weight: 500;
@@ -314,10 +312,11 @@ body {
 }
 
 .home-details-text__pretitle {
-   font-size: 21px;
+   font-size: 29px;
    font-weight: 400;
    position: relative;
    margin-bottom: 0;
+   top: 13px;
 }
 
 .empty {
@@ -357,7 +356,7 @@ body {
 }
 
 .home-details-text__title {
-   font-size: 40px;
+   font-size: 47px;
    font-weight: 600;
    position: relative;
    z-index: 0;
@@ -369,7 +368,7 @@ body {
    content: "";
    background-color: var(--detailColor2);
    position: absolute;
-   width: 12rem;
+   width: 15rem;
    height: 2rem;
    top: 1.5rem;
    left: 0;
@@ -389,7 +388,6 @@ body {
    display: flex;
    flex-direction: column;
    width: 100%;
-   
 }
 
 .single-detail-img {
@@ -420,7 +418,6 @@ body {
    width: 100%;
    height: 311px;
    margin: 1rem;
-   
 }
 .home-details__img-col-2_img2 {
    width: 210px;
@@ -463,7 +460,7 @@ body {
 }
 
 #contenedorProductos {
-   padding:0 1rem;
+   padding: 0 1rem;
 }
 
 .card-name {
@@ -475,17 +472,17 @@ body {
    margin-top: 0.2rem;
    position: relative;
    z-index: 0;
-   font-size: 40px;
+   font-size: 47px;
    color: var(--textColor2);
 }
 .home-contact__title__products::after {
    content: "";
    position: absolute;
    background-color: var(--detailColor6);
-   width: 95%;
+   width: 105%;
    height: 56%;
-   left: 0.2rem;
-   top: 2.5rem;
+   left: -0.8rem;
+   top: 1.5rem;
    z-index: -1;
 }
 .card {
@@ -932,7 +929,6 @@ footer {
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 0 10px;
       height: 67px;
       transition: all 0.3s ease;
    }
@@ -941,7 +937,6 @@ footer {
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 0 1rem;
       width: 50%;
    }
 
@@ -1092,11 +1087,15 @@ footer {
       font-size: 24px;
       font-weight: 400;
       position: relative;
-      font-size: 34px;
+      font-size: 29px;
+      top: 12px;
+      
    }
 
    .empty {
       position: relative;
+      font-size: 19px;
+      font-weight: 400;
    }
 
    .home-details-text__pretitle::after,
@@ -1110,7 +1109,7 @@ footer {
       background-color: var(--detailColor3);
       width: 360px;
       height: 1.6rem;
-      top: -13rem;
+      top: -15rem;
       left: -4rem;
    }
 
@@ -1132,7 +1131,7 @@ footer {
    }
 
    .home-details-text__title {
-      font-size: 66px;
+      font-size: 47px;
       font-weight: 600;
       position: relative;
       z-index: 0;
@@ -1146,7 +1145,7 @@ footer {
       position: absolute;
       width: 19.8rem;
       height: 2.5rem;
-      top: 2.5rem;
+      top: 1.5rem;
       left: 0;
       z-index: -1;
    }
@@ -1162,6 +1161,7 @@ footer {
    .paragraph1 {
       margin-top: 2rem;
       font-size: 17px;
+      width: 100%;
    }
 
    .single-detail-img {
@@ -1230,13 +1230,13 @@ footer {
       flex-direction: column;
    }
    .upper-title {
-      font-size: 28px;
+      font-size: 29px;
       line-height: 38.37px;
       font-weight: 400;
       color: var(--textColor2);
       position: relative;
       left: 2.2rem;
-      top: 10px;
+      top: 12px;
    }
    .home-contact__title__products {
       position: relative;
@@ -1539,6 +1539,7 @@ footer {
    .footer-img-logo {
       width: 250px;
       object-fit: cover;
+      margin-left: 6rem;
    }
 
    .footer-details__title {
@@ -1736,6 +1737,4 @@ footer {
    .home-details__img-col-1 > img {
       height: 100%;
    }
-   
-   
 }
